# CS-434

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  Token.hpp
Lexer/: Lexer.cpp  Lexer.hpp  main.cpp
compiler/: main.cpp  math.c  out.vsm  test.c  test.vsm
lexicalAnalyzer/: lexicalAnalyzer.cpp  test.c
parser/: AST.cpp  AST.hpp  Parser.cpp  Parser.hpp  ast.hpp
stackMachine/: StackMachine.cpp  StackMachine.hpp  euclid.vsm  main.cpp
